# SkRustLearn

./: Cargo.toml  CargoConcepts.txt  diverges  literals_and_operators
add/: Cargo.toml
add/add-one/: Cargo.toml
add/adder/: Cargo.toml
automated_tests/: Cargo.toml
automated_tests/src/: lib.rs  mymod.rs
automated_tests/tests/: integration_test.rs  integration_test2.rs
automated_tests/tests/common/: mod.rs
common_collections/: Cargo.toml
common_collections/src/: main.rs
error_handling/: Cargo.toml
error_handling/src/: main.rs
generictypes_traits_lifetimes2/: Cargo.toml
generictypes_traits_lifetimes2/src/: bin.rs  lib.rs
hello_macro/: Cargo.toml
hello_macro/hello_macro_derive/: Cargo.toml
hello_macro/hello_macro_derive/src/: lib.rs
hotel/: Cargo.toml
hotel/src/: front_of_house.rs  lib.rs
hotel/src/front_of_house/: hosting.rs
iterators_closures/: Cargo.toml
iterators_closures/src/: lib.rs  main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
pancakes/: Cargo.toml
restaurant/: Cargo.toml
restaurant/src/: front_of_hotel.rs  lib.rs
restaurant/src/front_of_hotel/: hotel.rs
src/: advanced_features.rs  bin.rs  diverges.rs  fearless_concurrency.rs  lib.rs  main.rs  messenger.rs  multithreaded_web_server.rs  object_oriented.rs  pattern_matching.rs  smart_pointers.rs
