[package]
name = "SkRustLearn"
version = "0.1.0"
authors = ["Sulabh Kothari <Sulabh.Kothari@external.mckinsey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mymods"
path = "src/lib.rs"

[[bin]]
name = "SkRustLearnBin"
path = "src/bin.rs"

[dependencies]
rand = "0.3.0"
hello_macro = { path = "./hello_macro/hello_macro" }